--- a/Iwillbe/app/src/main/res/layout/layout_homepage.xml
+++ b/Iwillbe/app/src/main/res/layout/layout_homepage.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10dp">
         <TextView
+            android:id="@+id/homepage_top_diqu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="重庆"
