--- a/Iwillbe/app/src/main/res/layout/layout_find_view.xml
+++ b/Iwillbe/app/src/main/res/layout/layout_find_view.xml
@@ -76,6 +76,7 @@
                     android:layout_marginLeft="2dp"/>
             </LinearLayout>
             <TextView
+                android:id="@+id/attention"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+关注"
