--- a/Iwillbe/app/src/main/res/layout/list_person_homepage.xml
+++ b/Iwillbe/app/src/main/res/layout/list_person_homepage.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <ListView
+        android:descendantFocusability="afterDescendants"
         android:id="@+id/person_publish_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
